codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_unix_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1139
expression: rendered
---
╭────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.0.0 -> 9.9.9                            │
│ Run npm install -g @mmmbuto/codex-cli-termux@latest to update. │
│                                                                │
│ See full release notes:                                        │
│ https://github.com/DioNanos/codex-termux/releases/latest       │
╰────────────────────────────────────────────────────────────────╯
